Fixing vert alignment as per Matt's feedback

--- a/src/components/IconButton/IconButton_shim.css
+++ b/src/components/IconButton/IconButton_shim.css
@@ -4,5 +4,5 @@
 
 .neo-btn.neo-badge::after {
 	right: 7px;
-	top: 7px;
+	top: 4px;
 }
